# scrod

./: .devcontainer.json  .dockerignore  .envrc  .gitignore  .hlint.yaml  .hooky.kdl  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  cabal.project  cabal.project.wasm  devenv.nix  flake.nix  fly.toml  legendary-chainsaw.cabal  nixpkgs.nix  scrod.cabal  shell.nix  weeder.toml
.claude/: settings.json
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: ci.yaml  ci.yml  deploy.yml  release.sh
docker/: Dockerfile
docs/plans/: 2026-02-05-wasm-web-app-design.md  2026-02-05-wasm-web-app-implementation.md  2026-02-12-json-only-js-renderer-design.md  2026-02-12-json-only-js-renderer-plan.md  2026-02-17-export-driven-declarations-design.md  2026-02-17-export-driven-declarations-plan.md  2026-02-17-function-argument-display-design.md  2026-02-18-cabal-extensions-design.md  2026-02-18-cabal-extensions-plan.md  2026-02-22-arm64-linux-ci-design.md
extra/bootstrap/: update.hs
extra/github-pages/: build.mjs  build.sh  index.html  index.js  package-lock.json  package.json  renderer.js  style.css  update-browser-wasi-shim.hs  worker.js
extra/renderer/: package-lock.json  package.json  schema.json  tsconfig.json
extra/renderer/src/: render.ts  types.ts
extra/renderer/src/sections/: doc.ts  exports.ts  extensions.ts  footer.ts  header.ts  imports.ts  items.ts  metadata.ts
extra/vscode/: .vscodeignore  LICENSE.txt  build.sh  esbuild.js  package-lock.json  package.json  tsconfig.json
extra/vscode/src/: extension.ts  wasmEngine.ts
extra/wasm/: build.hs
nix/: hooky.nix
scripts/: cabal-check.sh  cabal-clean.sh  cabal-gild.sh  cabal-repl.sh  cabal-test.sh  claude.sh  hlint.sh  ormolu.sh  weeder.sh
source/benchmark/: Main.hs
source/executable/: Main.hs
source/executables/scrod-wasi/: Main.hs
source/executables/scrod-wasm/: Main.hs
source/libraries/core/Scrod/: Convert.hs
source/libraries/scrod/: Scrod.hs
source/test-suite/: HeckHelpers.hs  JsonSpec.hs  Main.hs  Pointer.hs  Spec.hs
test-data/documentation/: has-no-documentation-by-default.json  picks-the-first-comment.json  works-with-block-comment-after.json  works-with-block-comment-before.json  works-with-inline-comment-after.json  works-with-inline-comment-before.json  works-with-multiple-lines.json
test-data/documentation/markup/: a-name.json  bold.json  definition-list.json  emphasis.json  empty.json  missing.json  monospaced.json  property.json
test-data/exports/: handles-empty-export-list.json  has-no-exports-by-default.json  has-no-exports-without-explicit-list.json  has-no-exports-without-module-declaration.json
test-data/exports/documentation/: handles-doc-attached-to-export.json  handles-doc-before-export.json  handles-inline-doc.json  handles-named-doc-reference.json  handles-section-heading-level-two.json  handles-section-heading.json
test-data/exports/module/: re-exports-a-module.json  re-exports-a-qualified-module.json
test-data/exports/namespace/: exports-with-pattern-namespace.json  exports-with-type-namespace.json
test-data/exports/thing/: exports-a-type-with-explicit-children.json  exports-a-type-with-wildcard-and-explicit-children.json  exports-a-type-with-wildcard.json  exports-a-type-without-subordinates.json
test-data/exports/var/: exports-a-variable.json  exports-an-operator.json  exports-multiple-variables.json
test-data/exports/warning/: attaches-deprecated-to-var.json  attaches-warning-to-module-re-export.json  attaches-warning-to-thing-with-subordinates.json  attaches-warning-to-thing.json  attaches-warning-to-var.json  attaches-warning-with-custom-category.json
test-data/extensions/: disables-an-extension-listed-before-the-language.json  handles-disabling-an-extension-enabled-by-the-language.json  handles-disabling-an-extension.json  handles-implied-extensions.json  handles-language-pragma.json  handles-options-ghc-pragma.json  handles-options-pragma.json  handles-unnecessarily-enabling-an-extension.json  has-no-extensions-by-default.json  picks-the-last-one-in-a-pragma.json  picks-the-last-pragma.json  supports-glasgow-extensions.json
test-data/extensions/special-cases/: cpp.json  named-field-puns.json  rank-n-types.json  recursive-do.json
test-data/invalid/: invalid-language-extension.json  parse-error.json
test-data/items/: signatures-comprehensive.json
test-data/items/merge/: child-items-not-merged.json  declaration-without-signature.json  documentation-concatenation.json  kind-signature-with-type.json  multi-name-signature.json  non-adjacent-signature.json  orphan-signature.json  pattern-synonym-signature.json  type-signature-with-declaration.json  uses-earliest-location.json
test-data/language/: handles-language-pragma.json  handles-options-ghc-pragma.json  handles-options-pragma.json  has-no-language-by-default.json  picks-the-last-one-in-a-pragma.json  picks-the-last-pragma.json  succeeds-with-ghc2021.json  succeeds-with-ghc2024.json  succeeds-with-haskell2010.json
test-data/name/: gets-a-complex-name.json  gets-a-simple-name.json  gets-the-column.json  gets-the-line.json  has-no-module-name-by-default.json
test-data/since/: is-empty-by-default.json
test-data/since/package/: works.json
test-data/since/version/: parses-a-complex-version.json  parses-a-simple-version.json
test-data/unsupported/: cpp.json  hsig.json
test-data/unsupported/lhs/: bird.json  tex.json
test-data/warning/: has-no-warning-by-default.json
test-data/warning/category/: uses-deprecations-for-deprecated.json  uses-deprecations-for-warning.json  works-with-x-custom.json
test-data/warning/value/: works-with-a-list.json  works-with-a-singleton-list.json  works-with-a-string.json  works-with-an-empty-list.json
vscode/: .vscodeignore  package-lock.json  package.json
vscode/src/: extension.ts  wasmEngine.ts
wasm/: Main.hs  Wasm.hs  build.hs  build.sh  cabal.project  nix-shell.sh  update-browser-wasi-shim.hs  update-browser-wasi-shim.sh  wasm.hs
wasm/www/: index.html  index.js  style.css  worker.js
web/: update-browser-wasi-shim.hs
(+429 files in other folders)
