cabal-version: 3.12
name: legendary-chainsaw
version: 0.2026.2.3

source-repository head
  location: https://github.com/tfausak/legendary-chainsaw
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.22.0
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: legendary-chainsaw
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: PackageInfo_legendary_chainsaw
  build-depends:
    bytestring ^>=0.12.2,
    exceptions ^>=0.10.11,
    parsec ^>=3.1.18,
    template-haskell ^>=2.24.0,
    text ^>=2.1.3,

  exposed-modules:
    LegendaryChainsaw
    LegendaryChainsaw.Executable
    LegendaryChainsaw.Executable.Config
    LegendaryChainsaw.Executable.Flag
    LegendaryChainsaw.Extra.Builder
    LegendaryChainsaw.Extra.Either
    LegendaryChainsaw.Extra.Maybe
    LegendaryChainsaw.Extra.Ord
    LegendaryChainsaw.Extra.Parsec
    LegendaryChainsaw.Extra.Read
    LegendaryChainsaw.Extra.Semigroup
    LegendaryChainsaw.Json.Boolean
    LegendaryChainsaw.Json.Null
    LegendaryChainsaw.Json.String
    LegendaryChainsaw.Spec
    LegendaryChainsaw.TestSuite
    LegendaryChainsaw.Version

  hs-source-dirs: source/library
  other-modules: PackageInfo_legendary_chainsaw

test-suite legendary-chainsaw-test-suite
  import: executable
  build-depends:
    transformers ^>=0.6.1,
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0

executable legendary-chainsaw
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
