cabal-version: 3.12
name: legendary-chainsaw
version: 0.2026.2.3
synopsis: TODO
description:
  TODO
  TODO

category: Documentation
license: 0BSD
license-file: LICENSE.txt
maintainer: Taylor Fausak
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  location: https://github.com/tfausak/legendary-chainsaw
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.22.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: legendary-chainsaw
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: PackageInfo_legendary_chainsaw
  build-depends:
    bytestring ^>=0.12.2,
    exceptions ^>=0.10.11,
    parsec ^>=3.1.18,
    template-haskell ^>=2.24.0,
    text ^>=2.1.3,

  -- cabal-gild: discover source/library
  exposed-modules:
    LegendaryChainsaw
    LegendaryChainsaw.Decimal
    LegendaryChainsaw.Executable
    LegendaryChainsaw.Executable.Config
    LegendaryChainsaw.Executable.Flag
    LegendaryChainsaw.Extra.Builder
    LegendaryChainsaw.Extra.Either
    LegendaryChainsaw.Extra.Maybe
    LegendaryChainsaw.Extra.Monoid
    LegendaryChainsaw.Extra.Ord
    LegendaryChainsaw.Extra.Parsec
    LegendaryChainsaw.Extra.Read
    LegendaryChainsaw.Extra.Semigroup
    LegendaryChainsaw.Json.Array
    LegendaryChainsaw.Json.Boolean
    LegendaryChainsaw.Json.Null
    LegendaryChainsaw.Json.Number
    LegendaryChainsaw.Json.Object
    LegendaryChainsaw.Json.Pair
    LegendaryChainsaw.Json.String
    LegendaryChainsaw.Json.Value
    LegendaryChainsaw.JsonPointer.Evaluate
    LegendaryChainsaw.JsonPointer.Pointer
    LegendaryChainsaw.JsonPointer.Token
    LegendaryChainsaw.Spec
    LegendaryChainsaw.TestSuite
    LegendaryChainsaw.Version

  hs-source-dirs: source/library
  other-modules: PackageInfo_legendary_chainsaw

test-suite legendary-chainsaw-test-suite
  import: executable
  build-depends:
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,
    transformers ^>=0.6.1,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0

executable legendary-chainsaw
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
