cabal-version: 3.12
name: legendary-chainsaw
version: 0.2026.2.4
synopsis: TODO
description:
  TODO
  TODO

category: Documentation
license: 0BSD
license-file: LICENSE.txt
maintainer: Taylor Fausak
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  location: https://github.com/tfausak/legendary-chainsaw
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.22.0
  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: legendary-chainsaw
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: PackageInfo_legendary_chainsaw
  build-depends:
    bytestring ^>=0.12.2,
    containers ^>=0.8,
    exceptions ^>=0.10.11,
    ghc ^>=9.14.1,
    ghc-boot-th ^>=9.14.1,
    parsec ^>=3.1.18,
    template-haskell ^>=2.24.0,
    text ^>=2.1.3,

  -- cabal-gild: discover source/library
  exposed-modules:
    LegendaryChainsaw
    LegendaryChainsaw.Core.Category
    LegendaryChainsaw.Core.Column
    LegendaryChainsaw.Core.Doc
    LegendaryChainsaw.Core.Example
    LegendaryChainsaw.Core.Export
    LegendaryChainsaw.Core.ExportIdentifier
    LegendaryChainsaw.Core.ExportName
    LegendaryChainsaw.Core.ExportNameKind
    LegendaryChainsaw.Core.Extension
    LegendaryChainsaw.Core.Header
    LegendaryChainsaw.Core.Hyperlink
    LegendaryChainsaw.Core.Identifier
    LegendaryChainsaw.Core.Item
    LegendaryChainsaw.Core.ItemKey
    LegendaryChainsaw.Core.ItemKind
    LegendaryChainsaw.Core.ItemName
    LegendaryChainsaw.Core.Language
    LegendaryChainsaw.Core.Level
    LegendaryChainsaw.Core.Line
    LegendaryChainsaw.Core.Located
    LegendaryChainsaw.Core.Location
    LegendaryChainsaw.Core.ModLink
    LegendaryChainsaw.Core.Module
    LegendaryChainsaw.Core.ModuleName
    LegendaryChainsaw.Core.Namespace
    LegendaryChainsaw.Core.PackageName
    LegendaryChainsaw.Core.Picture
    LegendaryChainsaw.Core.Section
    LegendaryChainsaw.Core.Since
    LegendaryChainsaw.Core.Subordinates
    LegendaryChainsaw.Core.Table
    LegendaryChainsaw.Core.TableCell
    LegendaryChainsaw.Core.Version
    LegendaryChainsaw.Core.Warning
    LegendaryChainsaw.Css.AtRule
    LegendaryChainsaw.Css.Block
    LegendaryChainsaw.Css.BlockContent
    LegendaryChainsaw.Css.Declaration
    LegendaryChainsaw.Css.Item
    LegendaryChainsaw.Css.Name
    LegendaryChainsaw.Css.Rule
    LegendaryChainsaw.Css.Selector
    LegendaryChainsaw.Css.Stylesheet
    LegendaryChainsaw.Decimal
    LegendaryChainsaw.Executable
    LegendaryChainsaw.Executable.Config
    LegendaryChainsaw.Executable.Flag
    LegendaryChainsaw.Extra.Builder
    LegendaryChainsaw.Extra.Either
    LegendaryChainsaw.Extra.Maybe
    LegendaryChainsaw.Extra.Monoid
    LegendaryChainsaw.Extra.Ord
    LegendaryChainsaw.Extra.Parsec
    LegendaryChainsaw.Extra.Read
    LegendaryChainsaw.Extra.Semigroup
    LegendaryChainsaw.Ghc.ArchOS
    LegendaryChainsaw.Ghc.DynFlags
    LegendaryChainsaw.Ghc.FileSettings
    LegendaryChainsaw.Ghc.GhcNameVersion
    LegendaryChainsaw.Ghc.OnOff
    LegendaryChainsaw.Ghc.Parse
    LegendaryChainsaw.Ghc.ParserOpts
    LegendaryChainsaw.Ghc.Platform
    LegendaryChainsaw.Ghc.PlatformMisc
    LegendaryChainsaw.Ghc.ToolSettings
    LegendaryChainsaw.Ghc.Uninitialized
    LegendaryChainsaw.Ghc.UnitId
    LegendaryChainsaw.Ghc.UnitSettings
    LegendaryChainsaw.Json.Array
    LegendaryChainsaw.Json.Boolean
    LegendaryChainsaw.Json.Null
    LegendaryChainsaw.Json.Number
    LegendaryChainsaw.Json.Object
    LegendaryChainsaw.Json.Pair
    LegendaryChainsaw.Json.String
    LegendaryChainsaw.Json.Value
    LegendaryChainsaw.JsonPointer.Evaluate
    LegendaryChainsaw.JsonPointer.Pointer
    LegendaryChainsaw.JsonPointer.Token
    LegendaryChainsaw.Spec
    LegendaryChainsaw.TestSuite
    LegendaryChainsaw.Version
    LegendaryChainsaw.Xml.Attribute
    LegendaryChainsaw.Xml.Comment
    LegendaryChainsaw.Xml.Content
    LegendaryChainsaw.Xml.Declaration
    LegendaryChainsaw.Xml.Document
    LegendaryChainsaw.Xml.Element
    LegendaryChainsaw.Xml.Instruction
    LegendaryChainsaw.Xml.Misc
    LegendaryChainsaw.Xml.Name
    LegendaryChainsaw.Xml.Text

  hs-source-dirs: source/library
  other-modules: PackageInfo_legendary_chainsaw

test-suite legendary-chainsaw-test-suite
  import: executable
  build-depends:
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,
    transformers ^>=0.6.1,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0

executable legendary-chainsaw
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
