cabal-version: 3.12
-- https://cabal.readthedocs.io/en/stable/cabal-package-description-file.html
name: scrod
version: 0.2026.1.30
synopsis: TODO
description:
  TODO
  TODO

category: Documentation
license: 0BSD
maintainer: Taylor Fausak
license-file: LICENSE.txt
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  test-data/**/*.json

source-repository head
  location: https://github.com/tfausak/scrod
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    aeson ^>=2.2.3,
    base ^>=4.20.2,
    bytestring ^>=0.12.2,
    clay ^>=0.16.1,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    http-client ^>=0.7.19,
    http-client-tls ^>=0.3.6,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20250303,
    optparse-applicative ^>=0.19.0,
    scientific ^>=0.3.8,
    template-haskell ^>=2.22.0,
    text ^>=2.1.3,
    transformers ^>=0.6.1,
    vector ^>=0.13.2,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: scrod
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

-- Private sub-library for GHC integration
library scrod-ghc
  build-depends:
    base ^>=4.20.2,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    template-haskell ^>=2.22.0,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror
  hs-source-dirs: source/library
  exposed-modules:
    Scrod.Exception.Uninitialized
    Scrod.Extra.ArchOS
    Scrod.Extra.DynFlags
    Scrod.Extra.FileSettings
    Scrod.Extra.GhcNameVersion
    Scrod.Extra.Natural
    Scrod.Extra.OnOff
    Scrod.Extra.ParserOpts
    Scrod.Extra.Platform
    Scrod.Extra.PlatformMisc
    Scrod.Extra.ToolSettings
    Scrod.Parse

  visibility: private

-- Private sub-library for core types (no JSON/HTML)
library scrod-types
  build-depends:
    base ^>=4.20.2,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    scrod:scrod-ghc,
    text ^>=2.1.3,
    transformers ^>=0.6.1,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror
  hs-source-dirs: source/library
  exposed-modules:
    Scrod.Convert
    Scrod.Type.Category
    Scrod.Type.Column
    Scrod.Type.ConversionState
    Scrod.Type.Doc
    Scrod.Type.Example
    Scrod.Type.Export
    Scrod.Type.ExportIdentifier
    Scrod.Type.ExportName
    Scrod.Type.ExportNameKind
    Scrod.Type.Extension
    Scrod.Type.Header
    Scrod.Type.Hyperlink
    Scrod.Type.Identifier
    Scrod.Type.InputFormat
    Scrod.Type.Interface
    Scrod.Type.Item
    Scrod.Type.ItemKey
    Scrod.Type.ItemName
    Scrod.Type.Language
    Scrod.Type.Level
    Scrod.Type.Line
    Scrod.Type.Located
    Scrod.Type.Location
    Scrod.Type.ModLink
    Scrod.Type.ModuleName
    Scrod.Type.Namespace
    Scrod.Type.OutputFormat
    Scrod.Type.PackageName
    Scrod.Type.Picture
    Scrod.Type.Section
    Scrod.Type.Since
    Scrod.Type.Subordinates
    Scrod.Type.Table
    Scrod.Type.TableCell
    Scrod.Type.Version
    Scrod.Type.Warning

  other-modules:
    PackageInfo_scrod
    Scrod.Extra.Natural
    Scrod.Extra.OnOff

  autogen-modules: PackageInfo_scrod
  visibility: private

-- Private sub-library for JSON serialization
library scrod-json
  build-depends:
    aeson ^>=2.2.3,
    base ^>=4.20.2,
    bytestring ^>=0.12.2,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    scientific ^>=0.3.8,
    scrod:scrod-ghc,
    scrod:scrod-types,
    text ^>=2.1.3,
    vector ^>=0.13.2,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-home-modules
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror
  hs-source-dirs: source/library
  exposed-modules:
    Scrod.Json.Category
    Scrod.Json.Column
    Scrod.Json.Doc
    Scrod.Json.Example
    Scrod.Json.Export
    Scrod.Json.ExportIdentifier
    Scrod.Json.ExportName
    Scrod.Json.ExportNameKind
    Scrod.Json.Extension
    Scrod.Json.Header
    Scrod.Json.Helpers
    Scrod.Json.Hyperlink
    Scrod.Json.Identifier
    Scrod.Json.Interface
    Scrod.Json.Item
    Scrod.Json.ItemKey
    Scrod.Json.ItemName
    Scrod.Json.Language
    Scrod.Json.Level
    Scrod.Json.Line
    Scrod.Json.Located
    Scrod.Json.Location
    Scrod.Json.ModLink
    Scrod.Json.ModuleName
    Scrod.Json.Namespace
    Scrod.Json.PackageName
    Scrod.Json.Picture
    Scrod.Json.Section
    Scrod.Json.Since
    Scrod.Json.Subordinates
    Scrod.Json.Table
    Scrod.Json.TableCell
    Scrod.Json.Utilities
    Scrod.Json.Version
    Scrod.Json.Warning

  visibility: private

-- Private sub-library for HTML rendering
library scrod-html
  build-depends:
    base ^>=4.20.2,
    bytestring ^>=0.12.2,
    clay ^>=0.16.1,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    lucid2 ^>=0.0.20250303,
    scrod:scrod-ghc,
    scrod:scrod-types,
    text ^>=2.1.3,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-home-modules
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror
  hs-source-dirs: source/library
  exposed-modules:
    Scrod.Html.Css
    Scrod.Html.Doc
    Scrod.Html.Export
    Scrod.Html.Interface
    Scrod.Html.Item
    Scrod.Html.Utilities

  visibility: private

-- Public main library (CLI + re-exports)
library
  autogen-modules: PackageInfo_scrod
  build-depends:
    aeson ^>=2.2.3,
    base ^>=4.20.2,
    bytestring ^>=0.12.2,
    clay ^>=0.16.1,
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    http-client ^>=0.7.19,
    http-client-tls ^>=0.3.6,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20250303,
    optparse-applicative ^>=0.19.0,
    scientific ^>=0.3.8,
    scrod:scrod-ghc,
    scrod:scrod-html,
    scrod:scrod-json,
    scrod:scrod-types,
    template-haskell ^>=2.22.0,
    text ^>=2.1.3,
    transformers ^>=0.6.1,
    vector ^>=0.13.2,

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-home-modules
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror
  hs-source-dirs: source/library
  exposed-modules:
    Scrod
    Scrod.Main

  other-modules:
    PackageInfo_scrod
    Scrod.Extra.Http

test-suite scrod-test-suite
  import: executable
  build-depends:
    directory ^>=1.3.8,
    filepath ^>=1.5.4,
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  other-modules:
    JsonSpec
    Pointer
    Spec

  type: exitcode-stdio-1.0

executable scrod
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
