cabal-version: 3.12
-- https://cabal.readthedocs.io/en/stable/cabal-package-description-file.html
name: scrod
version: 0.2026.1.30
synopsis: TODO
description:
  TODO
  TODO

category: Documentation
license: 0BSD
maintainer: Taylor Fausak
license-file: LICENSE.txt
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  test-data/**/*.json

source-repository head
  location: https://github.com/tfausak/scrod
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends:
    base ^>=4.20.2

  default-language: Haskell2010
  ghc-options:
    -fmax-relevant-binds=0
    -fno-show-error-context
    -funclutter-valid-hole-fits
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: scrod
  ghc-options:
    -rtsopts
    -threaded

library ghc
  import: library
  build-depends:
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    template-haskell ^>=2.22.0,

  hs-source-dirs: source/libraries/ghc
  -- cabal-gild: discover source/libraries/ghc
  exposed-modules:
    Scrod.Exception.Uninitialized
    Scrod.Extra.ArchOS
    Scrod.Extra.DynFlags
    Scrod.Extra.FileSettings
    Scrod.Extra.GhcNameVersion
    Scrod.Extra.Natural
    Scrod.Extra.OnOff
    Scrod.Extra.ParserOpts
    Scrod.Extra.Platform
    Scrod.Extra.PlatformMisc
    Scrod.Extra.ToolSettings
    Scrod.Parse

library core
  import: library
  autogen-modules: PackageInfo_scrod
  build-depends:
    containers ^>=0.7,
    ghc ^>=9.10.3,
    ghc-boot-th ^>=9.10.3,
    haddock-library ^>=1.11,
    scrod:ghc,
    text ^>=2.1.3,
    transformers ^>=0.6.1,

  hs-source-dirs: source/libraries/core
  -- cabal-gild: discover source/libraries/core
  exposed-modules:
    Scrod.Convert
    Scrod.Type.Category
    Scrod.Type.Column
    Scrod.Type.ConversionState
    Scrod.Type.Doc
    Scrod.Type.Example
    Scrod.Type.Export
    Scrod.Type.ExportIdentifier
    Scrod.Type.ExportName
    Scrod.Type.ExportNameKind
    Scrod.Type.Extension
    Scrod.Type.Header
    Scrod.Type.Hyperlink
    Scrod.Type.Identifier
    Scrod.Type.InputFormat
    Scrod.Type.Interface
    Scrod.Type.Item
    Scrod.Type.ItemKey
    Scrod.Type.ItemName
    Scrod.Type.Language
    Scrod.Type.Level
    Scrod.Type.Line
    Scrod.Type.Located
    Scrod.Type.Location
    Scrod.Type.ModLink
    Scrod.Type.ModuleName
    Scrod.Type.Namespace
    Scrod.Type.OutputFormat
    Scrod.Type.PackageName
    Scrod.Type.Picture
    Scrod.Type.Section
    Scrod.Type.Since
    Scrod.Type.Subordinates
    Scrod.Type.Table
    Scrod.Type.TableCell
    Scrod.Type.Version
    Scrod.Type.Warning

  other-modules: PackageInfo_scrod

library json
  import: library
  build-depends:
    aeson ^>=2.2.3,
    bytestring ^>=0.12.2,
    containers ^>=0.7,
    scrod:core,
    text ^>=2.1.3,
    vector ^>=0.13.2,

  hs-source-dirs: source/libraries/json
  -- cabal-gild: discover source/libraries/json
  exposed-modules:
    Scrod.Json.Category
    Scrod.Json.Column
    Scrod.Json.Doc
    Scrod.Json.Example
    Scrod.Json.Export
    Scrod.Json.ExportIdentifier
    Scrod.Json.ExportName
    Scrod.Json.ExportNameKind
    Scrod.Json.Extension
    Scrod.Json.Header
    Scrod.Json.Helpers
    Scrod.Json.Hyperlink
    Scrod.Json.Identifier
    Scrod.Json.Interface
    Scrod.Json.Item
    Scrod.Json.ItemKey
    Scrod.Json.ItemName
    Scrod.Json.Language
    Scrod.Json.Level
    Scrod.Json.Line
    Scrod.Json.Located
    Scrod.Json.Location
    Scrod.Json.ModLink
    Scrod.Json.ModuleName
    Scrod.Json.Namespace
    Scrod.Json.PackageName
    Scrod.Json.Picture
    Scrod.Json.Section
    Scrod.Json.Since
    Scrod.Json.Subordinates
    Scrod.Json.Table
    Scrod.Json.TableCell
    Scrod.Json.Utilities
    Scrod.Json.Version
    Scrod.Json.Warning

library html
  import: library
  build-depends:
    bytestring ^>=0.12.2,
    clay ^>=0.16.1,
    containers ^>=0.7,
    lucid2 ^>=0.0.20250303,
    scrod:core,
    text ^>=2.1.3,

  hs-source-dirs: source/libraries/html
  -- cabal-gild: discover source/libraries/html
  exposed-modules:
    Scrod.Html.Css
    Scrod.Html.Doc
    Scrod.Html.Export
    Scrod.Html.Interface
    Scrod.Html.Item
    Scrod.Html.Utilities

library
  import: library
  build-depends:
    bytestring ^>=0.12.2,
    http-client ^>=0.7.19,
    http-client-tls ^>=0.3.6,
    http-types ^>=0.12.4,
    optparse-applicative ^>=0.19.0,
    scrod:core,
    scrod:ghc,
    scrod:html,
    scrod:json,
    text ^>=2.1.3,

  hs-source-dirs: source/libraries/scrod
  -- cabal-gild: discover source/libraries/scrod
  exposed-modules:
    Scrod
    Scrod.Extra.Http
    Scrod.Main

test-suite scrod-test-suite
  import: executable
  build-depends:
    aeson ^>=2.2.3,
    bytestring ^>=0.12.2,
    containers ^>=0.7,
    directory ^>=1.3.8,
    filepath ^>=1.5.4,
    scientific ^>=0.3.8,
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,
    text ^>=2.1.3,
    vector ^>=0.13.2,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  -- cabal-gild: discover source/test-suite --exclude=**/Main.hs
  other-modules:
    JsonSpec
    Pointer
    Spec

  type: exitcode-stdio-1.0

executable scrod
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs
